# taskman

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json
include/: Helpers.h  Task.h  TaskManager.h  Utils.h
src/: TaskManager.cpp  main.cpp
