cmake_minimum_required(VERSION 3.16)
project(TaskMan)
add_subdirectory(Walnut)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/3rd_party/SQLiteCpp)
file(GLOB SOURCES "src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCES})
set(Headers PATH ${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_NAME} ${Headers})
target_link_libraries(${PROJECT_NAME} PUBLIC walnut SQLiteCpp sqlite3 pthread dl)
